@@ -4,20 +4,26 @@ import net.AbraXator.chakral.Chakral;
 import net.AbraXator.chakral.init.ModBiomes;
 import net.AbraXator.chakral.init.ModConfiguredFeatures;
 import net.minecraft.core.HolderLookup;
+import net.minecraft.core.RegistryAccess;
 import net.minecraft.core.RegistrySetBuilder;
+import net.minecraft.core.registries.BuiltInRegistries;
 import net.minecraft.core.registries.Registries;
 import net.minecraft.data.PackOutput;
 import net.minecraftforge.common.data.DatapackBuiltinEntriesProvider;
 
-import java.util.Collections;
+import java.util.Set;
 import java.util.concurrent.CompletableFuture;
 
 public class RegistryDataGenerator extends DatapackBuiltinEntriesProvider {
     public static final RegistrySetBuilder BUILDER = new RegistrySetBuilder()
             .add(Registries.CONFIGURED_FEATURE, ModConfiguredFeatures::bootstrap)
-            .add(Registries.BIOME, ModBiomes::bootstrapBiomes);
+            .add(Registries.BIOME, ModBiomes::bootstrap);
 
     public RegistryDataGenerator(PackOutput output, CompletableFuture<HolderLookup.Provider> registries) {
-        super(output, registries, BUILDER, Collections.singleton(Chakral.MOD_ID));
+        super(output, registries, BUILDER, Set.of("minecraft", Chakral.MOD_ID));
+    }
+
+    private static HolderLookup.Provider append(HolderLookup.Provider original, RegistrySetBuilder builder) {
+        return builder.buildPatch(RegistryAccess.fromRegistryOfRegistries(BuiltInRegistries.REGISTRY), original);
     }
 }
